# EthicML

./: .black-config.toml  .buildinfo  .editorconfig  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  404.html  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  LICENSE  Pipfile  README.md  azure-pipelines.yml  azure-pipelines_backup.yml  check_all.py  ethicml.algorithms.html  ethicml.algorithms.inprocess.html  ethicml.algorithms.postprocess.html  ethicml.data.html  ethicml.evaluators.html  ethicml.metrics.html  ethicml.plot.html  ethicml.preprocessing.html  ethicml.run.html  ethicml.utility.html  ethicml.vision.html  ethicml.visualisation.html  evaluators.html  genindex.html  index.html  make_release.sh  mypy.ini  objects.inv  preprocessing.html  py-modindex.html  pyproject.toml  (+15 more)
.doctrees/: 404.doctree  environment.pickle  ethicml.data.doctree  ethicml.metrics.doctree  ethicml.plot.doctree  ethicml.run.doctree  index.doctree  preprocessing.doctree  utility.doctree  visualisation.doctree
.doctrees/algorithms/: index.doctree  inprocess.doctree  postprocess.doctree  preprocess.doctree
.doctrees/data/: index.doctree  tabular_data.doctree  util.doctree
.doctrees/ethicml/: cross_validator.doctree  evaluate.doctree  evaluate_models.doctree  index.doctree  parallelism.doctree  preprocessing.doctree  utility.doctree  visualisation.doctree
.doctrees/ethicml.models/: base.doctree  index.doctree  inprocess.doctree  postprocess.doctree  preprocess.doctree
.doctrees/evaluators/: cross_validator.doctree  evaluate_models.doctree  index.doctree  parallelism.doctree
.doctrees/metrics/: index.doctree  per_sensitive_attribute.doctree
.doctrees/models/: index.doctree  inprocess.doctree  postprocess.doctree  preprocess.doctree
.doctrees/tutorials/: adult_dataset.doctree  migration_guide.doctree
.github/: dependabot.yml  labeler.yml  release.yml
.github/workflows/: black.yml  continuous_integration.yml  dependabot_auto.yml  docs.yml  dummy_ci.yml  labeler.yml  pythonpackage.yml
_sources/: 404.rst.txt  ethicml.algorithms.rst.txt  ethicml.data.rst.txt  ethicml.evaluators.rst.txt  ethicml.metrics.rst.txt  ethicml.preprocessing.rst.txt  ethicml.utility.rst.txt  ethicml.vision.rst.txt  ethicml.visualisation.rst.txt  evaluators.rst.txt  index.rst.txt  vision.rst.txt
_sources/algorithms/: index.rst.txt
_sources/data/: tabular_data.rst.txt  vision_data.rst.txt
_sources/ethicml/: index.rst.txt  parallelism.rst.txt  utility.rst.txt
_sources/ethicml.models/: base.rst.txt  preprocess.rst.txt
_sources/evaluators/: index.rst.txt
_sources/tutorials/: adult_dataset.ipynb.txt
_static/: documentation_options.js
algorithms/: index.html  inprocess.html  postprocess.html  preprocess.html  utils.py
algorithms/inprocess/: in_algorithm.py  logistic_regression.py  svm.py
algorithms/preprocess/: beutel.py  pre_algorithm.py
data/: adult.py  configurable_dataset.py  index.html  load.py  tabular_data.html  test.py  util.html  vision_data.html
data/csvs/: test.csv
docs/: .buildinfo  conf.py  ethicml.algorithms.html  ethicml.algorithms.inprocess.html  ethicml.algorithms.postprocess.html  ethicml.algorithms.preprocess.html  ethicml.data.html  ethicml.data.rst  ethicml.evaluators.html  ethicml.implementations.html  ethicml.metrics.html  ethicml.plot.rst  ethicml.preprocessing.html  ethicml.run.rst  ethicml.utility.html  ethicml.vision.html  ethicml.visualisation.html  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  utility.rst
docs/_sources/: ethicml.algorithms.inprocess.rst.txt  (+9 more)
docsource/: Makefile  generate_docs.sh
ethicml/: __init__.py  common.py  cross_validator.html  evaluate.html  evaluate_models.html  index.html  parallelism.html  preprocessing.html  utility.html  visualisation.html
ethicml.models/: base.html  index.html  inprocess.html  postprocess.html  preprocess.html
ethicml_models/: __init__.py  beutel.py  common_pytorch.py  svm.py
evaluators/: cross_validator.html  evaluate_models.html  evaluate_models.py  index.html  parallelism.html  per_sensitive_attribute.py
examples/: Bayesian Dropout.ipynb  RunSuite.ipynb  Untitled.ipynb  beutel.py  common.py  common_pytorch.py  kamiran_calders_variants.ipynb  logistic_regression.py  run_experiments.py  run_experiments_beutel.py  run_experiments_tilde.py  run_parallel.sh  run_parallel_beutel.sh  run_parallel_tilde.sh  seed_0_beutel_reduced.csv  seed_0_no_transform.csv  seed_0_no_transform_reduced.csv  seed_0_tilde.csv  seed_0_tilde_reduced.csv  seed_1_beutel_reduced.csv  seed_1_no_transform.csv  seed_1_no_transform_reduced.csv  seed_1_tilde.csv  seed_1_tilde_reduced.csv  seed_2_beutel_reduced.csv  seed_2_no_transform.csv  seed_2_no_transform_reduced.csv  seed_2_tilde.csv  seed_2_tilde_reduced.csv  seed_3_beutel_reduced.csv  seed_3_no_transform.csv  seed_3_no_transform_reduced.csv  seed_3_tilde.csv  seed_3_tilde_reduced.csv  seed_4_beutel.csv  seed_4_beutel_reduced.csv  seed_4_no_transform.csv  seed_4_no_transform_reduced.csv  seed_4_tilde.csv  seed_4_tilde_reduced.csv  (+29 more)
metrics/: accuracy.py  confusion_matrix.py  index.html  metric.py  normalized_mutual_information.py  per_sensitive_attribute.html  prob_pos.py  tpr.py
models/: index.html  inprocess.html  postprocess.html  preprocess.html
preprocessing/: train_test_split.py
results/: res.csv
tests/: __init__.py  basic_test.py  bob.py  conftest.py  data_omegaconf_test.py  dataset_modification_test.py  helpers_test.py  hydra_compatibility_test.py  loading_data_test.py  local_installed_lr.py  metric_test.py  models_inprocessing_test.py  models_postprocessing_test.py  models_preprocessing_test.py  paper_test.py  preprocessing_test.py  run_algorithm_test.py  saving_data_test.py  test_helpers.py  utility_test.py  vision_test.py  visualisation_test.py  zafar_deactivated.py  zafar_test.py
tutorials/: adult_dataset.html  adult_dataset.ipynb  migration_guide.html
type_defs/: numpy.pyi  pandas.pyi
utility/: activation.py  heaviside.py
visualisation/: plot.py
(+414 files in other folders)
