[tool.poetry]
name = "EthicML"
version = "1.0.1"
description = "EthicML is a library for performing and assessing algorithmic fairness. Unlike other libraries, EthicML isn't an education tool, but rather a researcher's toolkit."
readme="README.md"
authors = ["PAL <info@wearepal.ai>"]
packages = [
  { include = "ethicml" },
]
include=["ethicml/py.typed"]
exclude = ["ethicml/data/csvs/raw/*"]
classifiers=[
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords=["ml", "fairness"]
repository="https://github.com/wearepal/EthicML"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cloudpickle = { version = "^2.0.0", optional= true }
fairlearn = { version = "0.7.0", optional = true }
folktables = { version = "^0.0.11", optional = true }
gitdb2 = { version = "4.0.2", optional = true }
GitPython = { version = "^3.1.20", optional = true }
joblib = "^1.1.0"
matplotlib = { version = ">=3.0.2", optional = true }
numpy = ">=1.20.1"
omegaconf = { version = ">=2.2.2", optional = true }
pandas = "^1.0"
# pipenv from 2022.8.5 is broken for python2
pipenv = { version = ">=2018.11.26,<2022.8.5", optional = true }
ranzen = ">=2.0.1,<3.0.0"
scikit-learn = { version = ">=0.20.1", optional = true }
scipy = { version = "^1.7.2", optional = true }
seaborn = { version = ">=0.9.0", optional = true }
smmap2 = { version = "3.0.1", optional = true }
teext = "^0.1.3"
typing-extensions = ">=4.0"

[tool.poetry.extras]
metrics = ["scikit-learn"]
plot = ["matplotlib","seaborn"]
data = ["folktables"]
models = ["scipy","GitPython","pipenv","scikit-learn","fairlearn","cloudpickle","gitdb2","smmap2"]
all = ["fairlearn","cloudpickle","scikit-learn","matplotlib","seaborn","folktables","scipy","GitPython","pipenv","gitdb2","smmap2"]
ci = ["fairlearn","cloudpickle","scikit-learn","matplotlib","seaborn","folktables","scipy","GitPython","pipenv","gitdb2","smmap2","omegaconf"]

[tool.poetry.dev-dependencies]
black = "^22.6"
isort = "5.10.1"
mypy = ">=0.950"
pre-commit = "^2.20.0"
pydocstyle = {version = "^6.1.1", extras = ["toml"]}
pylint = "^2.14.5"
pytest = ">=6.2.2,<8.0.0"
pytest-cov = ">=2.6,<4.0"
python-type-stubs = {git = "https://github.com/wearepal/python-type-stubs.git", rev = "2f140fb"}
pandas-stubs = ">=1.4.2.220626"
omegaconf = ">=2.2.1"
pytest-xdist = "^2.5.0"

[tool.black]
line-length = 100
target-version = ['py37']
include = '''
(
  ethicml/(.*).pyi?$
  | tests/(.*).pyi?$
)
'''
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | .*/\.venv
    | _build
    | buck-out
    | build
    | dist
    | .github
    | docs
    | docsource
    | examples
    | plots
    | results
    | \.editorconfig
    | \.gitignore
    | \.pytest_cache
    | \.coverage.*
    | .pre-commit-config.yaml
    | .pylintrc
    | CODEOWNERS
    | LICENSE
    | mypy.ini
    | README.md
  )/
)
'''
skip-string-normalization = true

[tool.isort]
known_third_party = ["PIL", "black", "git", "fairlearn", "kit", "matplotlib", "mypy", "numpy", "pandas", "pylint", "pytest", "scipy", "seaborn", "setuptools", "sklearn", "tap", "teext", "torch"]
known_future_library = []
extra_standard_library = ["__future__", "typing_extensions"]
profile = "black"
line_length = 100
force_sort_within_sections = "True"
classes = ["LR", "LRCV", "SVM", "VFAE", "MLP", "DRO", "HRG", "TPR", "TNR", "CV", "NMI", "BCR", "PPV", "NPV", "AS", "F1"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
#disallow_any_unimported = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
warn_unused_ignores = true
mypy_path = "typings"
implicit_reexport = false

# ===== the following modules in EthicML aren't ready to be type checked so strictly =====
[[tool.mypy.overrides]]
module = ["tests.*", "ethicml.implementations.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ========== imports that don't have types ===========

[[tool.mypy.overrides]]
module = [
    "aif360.*",
    "black.*",
    "cloudpickle",
    "fairlearn.*",
    "folktables.*",
    "imageio",
    "pylint.*",
    "pytest.*",
    "setuptools.*",
    "scipy.spatial.distance",
    "sklearn.*",
    "torch.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pydocstyle]
convention = "pep257"
add_ignore = ["D105", "D107", "D401"]
ignore_decorators = "implements|overload"
match = "(?!(test_|__init__)).*\\.py"
